loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: ';' expected but '=' found.
step: Int= 0
         ^